Map spacing fixed

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -82,6 +82,6 @@
 
 #map {
     margin: 30px;
-    border: solid 3px grey;
+    border: solid 1px grey;
     border-radius: 10px;
 }
